--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -3,7 +3,7 @@
 .main-header {
   width: 100%;
   padding-left: 5.5%;
-  padding-right: 5.79%;
+  padding-right: 5.59%;
   margin-top: 2.5vh;
   @include flex-box(row, space-between, center);
 }
@@ -18,6 +18,7 @@
   margin-top: 0.3vh;
   text-transform: uppercase;
   font-family: $Open-sans-regular;
+  @include flex-box(row, center, center);
 }
 
 .nav-list-icons {
@@ -51,29 +52,24 @@
   text-decoration: none;
 }
 
-.contact-button {
-  font-family: $Open-sans-regular;
+.addOn {
+  margin-right: 3.6vw;
+}
+
+.nav-element-last {
   width: 10.3vw;
   height: 5vh;
-  min-height: 50px;
-  font-size: 1.11vw;
-  font-weight: 600;
-  padding-top: 2%;
-  padding-left: 1%;
-  margin-left: 3.7%;
-  margin-top: 0.3vh;
-  color: $color-third;
-  text-transform: uppercase;
+  min-height: 44px;
   border: 0.3vw solid $color-third;
-  background-color: transparent;
   border-radius: 5px;
-  transition: $transition;
+  margin-right: 0;
+  text-align: center;
+  line-height: 4.2vh;
+  vertical-align: middle;
+  margin-top: 0.3vh;
   &:hover {
     background-color: $color-third;
     color: $color-second;
-  }
-  &:focus {
-    outline: none;
   }
 }
 
