small fix in contact element

--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -95,6 +95,10 @@
     padding: 3.5vh;
     line-height: 0;
     border: 0.6vh solid $color-third;
+    &:hover {
+      background-color: transparent;
+      color: $color-third;
+    }
   }
   @include respond-to(tablet) {
     width: 11.3vw;
@@ -103,6 +107,10 @@
     margin-top: 0;
     line-height: 3.4vh;
     margin-right: 0;
+  }
+  &:hover {
+    background-color: $color-third;
+    color: $color-second;
   }
 }
 
